# rust-precise

./: .env  .gitignore  Cargo.toml
config/: dev.toml  prod.toml
src/: lib.rs  main.rs
src/docs/: docs_routes.rs  mod.rs  openapi.rs
src/docs/master/: city_openapi.rs  country_openapi.rs  mod.rs  state_openapi.rs
src/helpers/: option.rs
src/middleware/: auth.rs  log.rs  mod.rs
src/middlewares/: auth_middleware.rs  logging_middleware.rs  mod.rs
src/module/auth/: users.rs
src/modules/: mod.rs
src/modules/auth/: user.rs
src/modules/helper/: mod.rs  reason.rs
src/modules/master/: city.rs  country.rs  mod.rs  state.rs
src/routes/: routes.rs
src/routes/auth/: auth_routes.rs  user_routes.rs
src/routes/master/: city_routes.rs  country_routes.rs  master_routes.rs  mod.rs  state_routes.rs
src/schemas/: api_schemas.rs  mod.rs  users_schema.rs
src/schemas/auth/: mod.rs
src/schemas/helper/: mod.rs  reason_schema.rs
src/schemas/master/: city_schema.rs  country_schema.rs  mod.rs  state_schema.rs
src/settings/: db.rs
