[package]
name = "rust-precise"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
bcrypt = "0.16.0"
dotenv = "0.15.0"
serde = { version="1.0.217", features=["derive"]}
serde_json = "1.0.135"
sqlx = { version = "0.8.3", features = ["mysql", "runtime-tokio-rustls"] }
validator = { version = "0.19.0", features = ["derive"] }

[dev-dependencies]
wiremock = "0.6.2"
