[package]
name = "rust-precise"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
bcrypt = "0.16.0"
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.6"
futures = "0.3.31"
futures-util = "0.3.31"
jsonwebtoken = "9.3.0"
log = "0.4.25"
pin-project-lite = "0.2.16"
serde = { version="1.0.217", features=["derive"]}
serde_json = "1.0.135"
sqlx = { version = "0.8.3", features = ["chrono", "mysql", "runtime-tokio-rustls"] }
utoipa = { version = "5.3.1", features = ["actix_extras","chrono"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["actix-web"] }
uuid = { version = "1.12.1", features = ["v4"] }
validator = { version = "0.19.0", features = ["derive"] }

[dev-dependencies]
wiremock = "0.6.2"
